--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -211,7 +211,7 @@ header .shadow {
   position: absolute;
   left: 0;
   width: 100%;
-  height: 225px;
+  height: 160px;
   opacity: .5;
 }
 header .shadow.top {
@@ -1228,6 +1228,14 @@ h3.tag-header {
   }
 }
 /* Less than 479px width */
+@media screen and (max-width: 479px) {
+  header {
+	height: 160px;
+  }
+  header .shadow {
+    height: 60px;
+  }
+}
 .login {
   -ms-box-sizing: border-box;
   -moz-box-sizing: border-box;
