--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -79,6 +79,7 @@ h4 {
 h1 {
   font-size: 3rem;
   line-height: 4.2rem;
+  word-spacing: 1px;
 }
 h2 {
   font-size: 2rem;
@@ -267,7 +268,7 @@ header img.rainbow {
 }
 header h1 {
   font-family: 'Roboto';
-  font-weight: 700;
+  font-weight: 300;
   text-transform: uppercase;
   font-size: 1.75rem;
   color: #ffffff;
@@ -276,6 +277,7 @@ header h1 {
   margin: 0;
   padding: 0;
   line-height: 1.75rem;
+  word-spacing: 1px;
 }
 header h1 a {
   color: #ffffff;
@@ -1186,6 +1188,10 @@ h3.tag-header {
 }
 /* Less than 900px width */
 @media screen and (max-width: 900px) {
+  header {
+	height: 320px;
+  }
+  
   .container {
     width: 70%;
   }
@@ -1199,6 +1205,10 @@ h3.tag-header {
 }
 /* Less than 730px width */
 @media screen and (max-width: 730px) {
+  header {
+    height: 240px;
+  }
+  
   .post .post-footer .post-author {
     width: 20%;
   }
@@ -1215,6 +1225,9 @@ h3.tag-header {
 }
 /* Less than 600px width */
 @media screen and (max-width: 600px) {
+  header {
+    height: 210px;
+  }
   .container {
     width: 100%;
     padding: 0 30px 0 30px;
@@ -1229,16 +1242,29 @@ h3.tag-header {
 }
 /* Less than 479px width */
 @media screen and (max-width: 479px) {
-  header .container.wide {
-    padding: 15px 20px 30px;
-  }
-  
   header {
 	height: 150px;
   }
-  
   header h1 {
     font-size: 1.125rem;
+  }
+  header .container.wide {
+    padding: 15px 20px 30px;
+  }
+  .bio {
+	top: -36px;
+	margin-left: -36px;
+	height: 72px;
+	width: 72px;
+  }
+  .bio .user-avatar {
+	width: 72px;
+	height: 72px;
+  }
+  .bio .user-avatar img {
+	width: 72px;
+	height: 72px;
+	border: 4px solid #fff;
   }
 }
 .login {
