--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1228,6 +1228,9 @@ h3.tag-header {
   header {
     height: 210px;
   }
+  header h1 {
+    font-size: 1.5rem;
+  }
   .container {
     width: 100%;
     padding: 0 30px 0 30px;
